--- a/app/pom.xml
+++ b/app/pom.xml
@@ -22,6 +22,10 @@
       <artifactId>lib-core-domain-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>pl.harpi</groupId>
+      <artifactId>lib-core-infrastructure</artifactId>
+    </dependency>
+    <dependency>
       <groupId>pl.harpi.janus</groupId>
       <artifactId>common-app</artifactId>
     </dependency>
@@ -51,7 +55,11 @@
     </dependency>
     <dependency>
       <groupId>pl.harpi.janus</groupId>
-      <artifactId>identity-infrastructure</artifactId>
+      <artifactId>identity-infrastructure-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>pl.harpi.janus</groupId>
+      <artifactId>identity-infrastructure-memory</artifactId>
     </dependency>
     <dependency>
       <groupId>org.liquibase</groupId>
