--- a/modules/identity/identity-infrastructure/pom.xml
+++ b/modules/identity/identity-infrastructure/pom.xml
@@ -8,30 +8,9 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>identity-infrastructure</artifactId>
-  <dependencies>
-    <dependency>
-      <groupId>pl.harpi</groupId>
-      <artifactId>lib-core-domain-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>pl.harpi</groupId>
-      <artifactId>lib-core-infrastructure</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>pl.harpi.janus</groupId>
-      <artifactId>identity-domain-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.mapstruct</groupId>
-      <artifactId>mapstruct</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-  </dependencies>
+  <packaging>pom</packaging>
+  <modules>
+    <module>identity-infrastructure-jpa</module>
+    <module>identity-infrastructure-memory</module>
+  </modules>
 </project>
