--- a/app/pom.xml
+++ b/app/pom.xml
@@ -54,14 +54,6 @@
       <artifactId>identity-domain-impl</artifactId>
     </dependency>
     <dependency>
-      <groupId>pl.harpi.janus</groupId>
-      <artifactId>identity-infrastructure-jpa</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>pl.harpi.janus</groupId>
-      <artifactId>identity-infrastructure-memory</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
     </dependency>
@@ -74,7 +66,53 @@
         <groupId>pl.harpi.janus</groupId>
         <artifactId>db</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>jpa-postgresql</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>pl.harpi.janus</groupId>
+          <artifactId>identity-infrastructure-jpa</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>jpa-h2</id>
+      <dependencies>
+        <dependency>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>pl.harpi.janus</groupId>
+          <artifactId>identity-infrastructure-jpa</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>memory</id>
+      <dependencies>
+        <dependency>
+          <groupId>pl.harpi.janus</groupId>
+          <artifactId>identity-infrastructure-memory</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
+
   <build>
     <finalName>janus</finalName>
     <plugins>
