--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
         <version>32.1.3-jre</version>
       </dependency>
       <dependency>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        <version>2.3.0</version>
+      </dependency>
+      <dependency>
         <groupId>pl.harpi.janus</groupId>
         <artifactId>db</artifactId>
         <version>${project.version}</version>
