--- a/modules/identity/identity-app/pom.xml
+++ b/modules/identity/identity-app/pom.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>pl.harpi.janus</groupId>
-    <artifactId>identity</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>identity-app</artifactId>
-  <dependencies>
-    <dependency>
-      <groupId>pl.harpi.janus</groupId>
-      <artifactId>identity-domain-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.mapstruct</groupId>
-      <artifactId>mapstruct</artifactId>
-    </dependency>
-  </dependencies>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>pl.harpi.janus</groupId>
+        <artifactId>identity</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>identity-app</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>pl.harpi.janus</groupId>
+            <artifactId>identity-domain-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
 </project>
