--- a/modules/identity/identity-infrastructure/identity-infrastructure-jpa/pom.xml
+++ b/modules/identity/identity-infrastructure/identity-infrastructure-jpa/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>pl.harpi</groupId>
-            <artifactId>lib-core-infrastructure</artifactId>
+            <artifactId>lib-core-infrastructure-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>pl.harpi.janus</groupId>
@@ -31,10 +31,6 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
         </dependency>
     </dependencies>
 </project>
