--- a/modules/identity/identity-infrastructure/identity-infrastructure-memory/pom.xml
+++ b/modules/identity/identity-infrastructure/identity-infrastructure-memory/pom.xml
@@ -11,4 +11,22 @@
 
     <artifactId>identity-infrastructure-memory</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>pl.harpi</groupId>
+            <artifactId>lib-core-domain-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>pl.harpi</groupId>
+            <artifactId>lib-core-infrastructure-memory</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>pl.harpi.janus</groupId>
+            <artifactId>identity-domain-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 </project>
