--- a/modules/identity/identity-app/pom.xml
+++ b/modules/identity/identity-app/pom.xml
@@ -21,5 +21,9 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 </project>
