--- a/modules/identity/identity-domain-impl/pom.xml
+++ b/modules/identity/identity-domain-impl/pom.xml
@@ -21,5 +21,9 @@
             <groupId>pl.harpi.janus</groupId>
             <artifactId>identity-domain-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 </project>
